@@ -116,9 +116,39 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|fs
+operator|.
+name|CommonConfigurationKeysPublic
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|ipc
 operator|.
 name|Server
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|authorize
+operator|.
+name|PolicyProvider
 import|;
 end_import
 
@@ -640,7 +670,7 @@ name|yarn
 operator|.
 name|ipc
 operator|.
-name|RPCUtil
+name|YarnRPC
 import|;
 end_import
 
@@ -654,9 +684,15 @@ name|hadoop
 operator|.
 name|yarn
 operator|.
-name|ipc
+name|server
 operator|.
-name|YarnRPC
+name|timeline
+operator|.
+name|security
+operator|.
+name|authorize
+operator|.
+name|TimelinePolicyProvider
 import|;
 end_import
 
@@ -812,6 +848,31 @@ name|DEFAULT_TIMELINE_SERVICE_CLIENT_THREAD_COUNT
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// Enable service authorization?
+if|if
+condition|(
+name|conf
+operator|.
+name|getBoolean
+argument_list|(
+name|CommonConfigurationKeysPublic
+operator|.
+name|HADOOP_SECURITY_AUTHORIZATION
+argument_list|,
+literal|false
+argument_list|)
+condition|)
+block|{
+name|refreshServiceAcls
+argument_list|(
+name|conf
+argument_list|,
+operator|new
+name|TimelinePolicyProvider
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|server
 operator|.
 name|start
@@ -916,6 +977,30 @@ name|this
 operator|.
 name|bindAddress
 return|;
+block|}
+DECL|method|refreshServiceAcls (Configuration configuration, PolicyProvider policyProvider)
+specifier|private
+name|void
+name|refreshServiceAcls
+parameter_list|(
+name|Configuration
+name|configuration
+parameter_list|,
+name|PolicyProvider
+name|policyProvider
+parameter_list|)
+block|{
+name|this
+operator|.
+name|server
+operator|.
+name|refreshServiceAcl
+argument_list|(
+name|configuration
+argument_list|,
+name|policyProvider
+argument_list|)
+expr_stmt|;
 block|}
 DECL|class|ApplicationHSClientProtocolHandler
 specifier|private
